--- a/Introduction-Html/personal-website/index.html
+++ b/Introduction-Html/personal-website/index.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lawal's Personal Site</title>
-</head>
-<body>
+  </head>
+  <body>
+    <img src="images/Lawal_Ameh.jpg" alt="Lawal Profile Picture" />
     <h1>Lawal Ameh</h1>
-    <p><em>Instructor and Software Engineer at <strong>Aptech Computer Education</strong></em></p>
+    <p>
+      <em
+        >Instructor and Software Engineer at
+        <strong>Aptech Computer Education</strong></em
+      >
+    </p>
     <p>I am a full stack dotnet web develover. I love watching mooovies..</p>
-    <hr>
+    <hr />
 
     <h3>Books and Teaching</h3>
-     
-    
-</body>
+    <ul>
+      <li>Machine Learning from A - Z</li>
+      <li>Asp .net MVC and Web Api</li>
+      <li>Ethical Hacking</li>
+      <li>CompTIA</li>
+      <li>Data Science</li>
+      <li>Networking</li>
+    </ul>
+    <h3>My Hobbies</h3>
+    <ol>
+      <li>Reading</li>
+      <li>Exercising</li>
+    </ol>
+  </body>
 </html>
