learn how to use tables

--- a/Introduction-Html/personal-website/index.html
+++ b/Introduction-Html/personal-website/index.html
@@ -6,15 +6,33 @@
     <title>Lawal's Personal Site</title>
   </head>
   <body>
-    <img src="images/Lawal_Ameh.jpg" alt="Lawal Profile Picture" />
-    <h1>Lawal Ameh</h1>
-    <p>
-      <em
-        >Instructor and Software Engineer at
-        <strong>Aptech Computer Education</strong></em
-      >
-    </p>
-    <p>I am a full stack dotnet web develover. I love watching mooovies..</p>
+    <table>
+      <tr>
+        <td>
+          <img
+            src="images/Lawal_Ameh.jpg"
+            alt="Lawal Profile Picture"
+            width="200px"
+          />
+        </td>
+        <td>
+          <h1>Lawal Ameh</h1>
+          <p>
+            <em
+              >Instructor and Software Engineer at
+              <strong>Aptech Computer Education</strong></em
+            >
+          </p>
+          <p>
+            I am a Software Engineer and Cyber Instructor.
+            I am continuously learning <br>
+            and you can never find me with redundant Knowledge.
+            I love watching mooovies..
+          </p>
+        </td>
+      </tr>
+    </table>
+
     <hr />
 
     <h3>Books and Teaching</h3>
@@ -26,6 +44,33 @@
       <li>Data Science</li>
       <li>Networking</li>
     </ul>
+    <h3>Work Experience</h3>
+
+    <table>
+      <thead>
+        <th>Dates</th>
+        <th>Work</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2023-2024</td>
+          <td>Instructor at Aptech</td>
+        </tr>
+        <tr>
+          <td>2021</td>
+          <td>Lab Intern at Nile University</td>
+        </tr>
+      </tbody>
+    </table>.
+    <h3>Skills</h3>
+    <table>
+      <tr>
+        <td>Software Development</td>
+        <td>Ethical Hacking</td>
+        <td>💯🐕‍🦺</td>
+      </tr>
+    </table>
+    <hr />
     <h3>My Hobbies</h3>
     <ol>
       <li>Reading</li>
