add the link to aptech

--- a/Introduction-Html/personal-website/index.html
+++ b/Introduction-Html/personal-website/index.html
@@ -20,14 +20,18 @@
           <p>
             <em
               >Instructor and Software Engineer at
-              <strong>Aptech Computer Education</strong></em
+              <strong
+                ><a href="http://www.aptech-nigeria.com" target="_blank"
+                  >Aptech Computer Education</a
+                ></strong
+              ></em
             >
           </p>
           <p>
-            I am a Software Engineer and Cyber Instructor.
-            I am continuously learning <br>
-            and you can never find me with redundant Knowledge.
-            I love watching mooovies..
+            I am a Software Engineer and Cyber Instructor. I am continuously
+            learning <br />
+            and you can never find me with redundant Knowledge. I love watching
+            mooovies..
           </p>
         </td>
       </tr>
@@ -44,6 +48,7 @@
       <li>Data Science</li>
       <li>Networking</li>
     </ul>
+    <hr />
     <h3>Work Experience</h3>
 
     <table>
@@ -61,7 +66,8 @@
           <td>Lab Intern at Nile University</td>
         </tr>
       </tbody>
-    </table>.
+    </table>
+    <hr />
     <h3>Skills</h3>
     <table>
       <tr>
