--- a/Introduction-Html/personal-website/index.html
+++ b/Introduction-Html/personal-website/index.html
@@ -77,6 +77,8 @@
       </tr>
     </table>
     <hr />
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contact-me.html">Contact Me</a>
     <h3>My Hobbies</h3>
     <ol>
       <li>Reading</li>
