--- a/Introduction-Html/personal-website/contact-me.html
+++ b/Introduction-Html/personal-website/contact-me.html
@@ -7,8 +7,19 @@
 </head>
 <body>
     <h1>My Contact Details</h1>
-    <p></p>
-    <p></p>
-    <p></p>
+    <p>Lawal Ameh</p>
+    <p>amehlawal@gmail.com</p>
+    <p>07061856938</p>
+    <hr>
+
+    <form action="mailto:amehlawal@gmail.com" method="post" enctype="text/plain">
+        <label for="">Your Name:</label>
+        <input type="text" name="yourName"> <br>
+        <label for="">Your Email:</label>
+        <input type="email" name="yourEmail"> <br>
+        <label for="">Your Message:</label>
+        <input type="textarea" rows="10" cols="30" name="yourMessage" id="">
+        <input type="submit">
+    </form>
 </body>
 </html>
