--- a/Introduction-Html/personal-website/index.html
+++ b/Introduction-Html/personal-website/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lawal's Personal Site</title>
   </head>
-  <body>
+  <body style="background-color: powderblue;">
     <table>
       <tr>
         <td>
@@ -13,6 +13,7 @@
             src="images/Lawal_Ameh.jpg"
             alt="Lawal Profile Picture"
             width="200px"
+            style="border-radius: 45%;"
           />
         </td>
         <td>
@@ -30,7 +31,7 @@
           <p>
             I am a Software Engineer and Cyber Instructor. I am continuously
             learning <br />
-            and you can never find me with redundant Knowledge. I love watching
+            and you can ever find me with redundant Knowledge. I love watching
             mooovies..
           </p>
         </td>
