use inline styles

--- a/Introduction-Html/personal-website/index.html
+++ b/Introduction-Html/personal-website/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lawal's Personal Site</title>
+
+    <style>
+      body {
+        background-color: powderblue !important;
+      }
+      hr {
+        border-style: dotted none none;
+        border-color: grey;
+        border-width: 5px;
+        width: 15%;
+      }
+    </style>
   </head>
-  <body style="background-color: powderblue;">
+  <body>
     <table>
       <tr>
         <td>
@@ -13,7 +25,6 @@
             src="images/Lawal_Ameh.jpg"
             alt="Lawal Profile Picture"
             width="200px"
-            style="border-radius: 45%;"
           />
         </td>
         <td>
@@ -80,6 +91,5 @@
     <hr />
     <a href="hobbies.html">My Hobbies</a>
     <a href="contact-me.html">Contact Me</a>
-    
   </body>
 </html>
