--- a/Introduction-Html/personal-website/index.html
+++ b/Introduction-Html/personal-website/index.html
@@ -4,18 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lawal's Personal Site</title>
-
-    <style>
-      body {
-        background-color: powderblue !important;
-      }
-      hr {
-        border-style: dotted none none;
-        border-color: grey;
-        border-width: 5px;
-        width: 15%;
-      }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <table>
