--- a/DOM/index.html
+++ b/DOM/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Good Bye</h1>
 
-    <input type="checkbox" name="" id=""> Click Me
+    <input type="checkbox" name="" id="" />
+    <button class="btn">Clic me</button>
     <ul>
-        <li>Google</li>
-        <li>Second</li>
-        <li>Third</li>
+      <li>Google</li>
+      <li>Second</li>
+      <li>Third</li>
     </ul>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
