--- a/DOM/index.html
+++ b/DOM/index.html
@@ -11,7 +11,7 @@
     <input type="checkbox" name="" id="" />
     <button class="btn">Clic me</button>
     <ul>
-      <li>Google</li>
+      <li id="item">Google</li>
       <li>Second</li>
       <li>Third</li>
     </ul>
