add more styles

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -11,10 +11,10 @@
 
     <input type="checkbox" name="" id="" />
     <button class="btn">Clic me</button>
-    <ul>
-      <li id="item">Google</li>
-      <li>Second</li>
-      <li>Third</li>
+    <ul class="unordered">
+      <li class="list" id="item"><a href="https://google.com">Google</a></li>
+      <li class="list">Second</li>
+      <li class="list">Third</li>
     </ul>
     <script src="index.js"></script>
   </body>
