--- a/DOM/index.html
+++ b/DOM/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Good Bye</h1>
+   
+    <h1 id>Hello</h1>
 
     <input type="checkbox" name="" id="" />
     <button class="btn">Clic me</button>
